fix: use allowedOriginPatterns to wildcard ALL vercel frontend urls